#161064 IllegalArgumentException: fileURL may not contain spaces!, part II - handling also non "file" protocols